Fixed editor overflow

--- a/public/styles/languages/programminglanguage.css
+++ b/public/styles/languages/programminglanguage.css
@@ -215,10 +215,12 @@ main {
   color: #AAA;
   font-size: 1.8vh;
   caret-color: white;
+  width: 100%;
   height: 100%;
   border: 0;
   box-sizing: border-box;
   padding: 0.5vw;
+  padding-right: 0;
   overflow: auto;
 }
 
@@ -244,6 +246,7 @@ main {
   border: 0;
   box-sizing: border-box;
   padding: 0.5vw;
+  padding-right: 0;
 }
 
 .buttons {
